# CarTelligente

./: .dockerignore  .env  ANDROID_BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml  package-lock.json  package.json  server.js  test-db-connection.js  test-metrics.ps1  test-metrics.sh
QTApp/: .gitignore  README.md  build_android.sh  run.sh
QTApp/android/: AndroidManifest.xml
QTApp/qml/: AnomaliesPage.qml  AnomalyCard.qml  BatteryPage.qml  BatterySmallCard.qml  CodeStatCard.qml  CodesPage.qml  Main.qml  NavButton.qml  ResourceCard.qml  ResourcePage.qml  resources.qrc
QTApp/src/data/: anomalyitem.cpp  batterydata.cpp  diagnosticcode.h  enginedata.h  resourcedata.cpp  resourceitem.cpp
qml/: AnomalyStatCard.qml  BatteryDetailItem.qml  CodeCard.qml  CustomProgressBar.qml  EngineCard.qml  EnginePage.qml
src/: main.cpp
src/data/: anomalyitem.h  batterydata.h  dataprovider.cpp  dataprovider.h  diagnosticcode.cpp  enginedata.cpp  resourcedata.h  resourceitem.h
